--- a/studies.html
+++ b/studies.html
@@ -20,15 +20,23 @@
 </head>
 
 <body>
-  <nav class="navbar">
-    <div class="logo-container">
-      <a href="index.html">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">
         <img src="./assets/Img/logo-pili.svg" alt="Logo" class="logo" />
-        <span class="tooltip">HOME</span>
+        <span class="tooltip">INICIO</span>
+        <span class="navbar-text text-white">Pilar García Royo</span>
       </a>
-      <span class="navbar-text">Pilar García Royo</span>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-list navbar-nav ms-auto">
+          <!-- Los elementos <li> y <a> han sido eliminados en el HTML -->
+        </ul>
+      </div>
     </div>
-    <ul class="navbar-list" id="navbarList"></ul>
   </nav>
   <main class="main">
     <header class="icon-tools-section px-5 pt-5">
@@ -37,9 +45,9 @@
       </div>
     </header>
     <section class="row">
-      <section class="col-9">
+      <section class="col-12 col-lg-9">
         <h1 class="skillsTitle text-center">ESTUDIOS Y CAPACITACIÓN</h1>
-        <section class="card-grid m-5 ps-5">
+        <section class="card-grid m-5">
           <div class="card">
             <div class="image-container">
               <img src="./assets/Img/ux-ui.png" class="card-img-top w-50 m-5" alt="Insignia de Front End Trainee">
@@ -148,7 +156,7 @@
 
         </section>
       </section>
-      <section class="col-3 skills-section pt-3 px-5">
+      <section class="col-12 col-lg-3 skills-section">
         <h4 class="skills-subtitle my-5 pt-5">Habilidades Blandas:</h4>
         <ul class="skills-list mt-5" id="softSkillsList"></ul>
         <h4 class="skills-subtitle my-5 pt-5">Competencias:</h4>
@@ -166,19 +174,22 @@
     </section>
   </main>
 
-  <footer class="footer">
-    <div id="footerContainer">
-      <ul id="socialIconsList" class="nav flex-column"></ul>
+  <footer class="footer w-100">
+    <div id="footerContainer" class="container-fluid w-100">
+      <ul id="socialIconsList" class="nav flex-column">
+        <p class="text-center"><a class="whatsapp-footer text-white" href="https://wa.me/NUMERO_DE_CELULAR"
+            target="_blank"> <i class="fab fa-whatsapp text-white"></i> +56 994 40 45 16</a></p>
+      </ul>
     </div>
   </footer>
-  
-  
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
   <script src="./src/js/script.js"></script>
   <script src="./src/js/script-studies.js"></script>
- <script src="./src/js/footer.js"></script>
+  <script src="./src/js/footer.js"></script>
 </body>
 
 </html>
