prueba img home

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="./assets/img/logo-pili.svg" />
+    <link rel="icon" type="image/svg+xml" href="assets/img/logo-pili.svg" />
     <title>Pilar García Royo</title>
     <meta name="author" content="Pilar García Royo" />
     <meta name="description" content="Mi curriculum vitae como periodista, programadora front end y diseñadora Ux/Ui" />
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                <img src="./assets/Img/logo-pili.svg" alt="Logo" class="logo" />
+                <img src="assets/Img/logo-pili.svg" alt="Logo" class="logo" />
                 <span class="tooltip">INICIO</span>
                 <span class="navbar-text text-white">Pilar García Royo</span>
             </a>
@@ -72,7 +72,7 @@
             </div>
         </div>
         <section class="col-12 col-lg-5 mt-3">
-            <img src="./assets/img/biobio.png" alt="Panorama del río Bío-Bío" id="rio-biobio">
+            <img src="assets/img/biobio.png" alt="Panorama del río Bío-Bío" id="rio-biobio">
             <p class="mt-5">Investigar las tendencias de mercado; seleccionar las palabras clave para
                 mejorar la visibilidad en los motores de búsqueda (SEO); utilizar la narrativa para contar historias
                 que conecten emocionalmente con la audiencia; manejar herramientas de análisis, prestando atención a
@@ -82,10 +82,10 @@
                 orillas del Río Bío Bío, Chile.</p>
             <p class="mb-5">Gracias :)</p>
             <div class="galeria-home text-center mb-5">
-                <img src="./assets/img/mariposa.svg" class="campo-img" alt="Parcela Castañares">
-                <img src="./assets/img/otonio.svg" class="campo-img" alt="Parcela Castañares">
-                <img src="./assets/img/caqui-arbol.svg" class="campo-img" alt="Parcela Castañares">
-                <img src="./assets/img/flor.svg" class="campo-img" alt="Parcela Castañares">
+                <img src="assets/img/mariposa.svg" class="campo-img" alt="Parcela Castañares">
+                <img src="assets/img/otonio.svg" class="campo-img" alt="Parcela Castañares">
+                <img src="assets/img/caqui-arbol.svg" class="campo-img" alt="Parcela Castañares">
+                <img src="assets/img/flor.svg" class="campo-img" alt="Parcela Castañares">
             </div>
         </section>
     </section>
