prueba img biobio comprimida png

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
         </div>
         <section class="col-12 col-lg-5 mt-3">
-            <img src="./assets/img/biobio.webp" alt="Panorama del río Bío-Bío" id="rio-biobio">
+            <img src="./assets/img/biobio-comp.png" alt="Panorama del río Bío-Bío" id="rio-biobio">
             <p class="mt-5">Investigar las tendencias de mercado; seleccionar las palabras clave para
                 mejorar la visibilidad en los motores de búsqueda (SEO); utilizar la narrativa para contar historias
                 que conecten emocionalmente con la audiencia; manejar herramientas de análisis, prestando atención a
